[package]
name = "microservice-toolbox"
version = "1.2.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
tokio = { version = "1.52.3", features = ["full"] }
tonic = "0.14.6"
prost = "0.14.3"
tonic-reflection = "0.14.6"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.134"
bincode = "3.0.0"
rand = "0.10"
rmp-serde = "1.3.1"
unilog-rs = { git = "https://github.com/Bastien-Antigravity/universal-logger", branch = "main", optional = true }
libloading = "0.9"
regex = "1.10"

[features]
default = []
unilog = ["dep:unilog-rs"]


[[bin]]
name = "integration_gen"
path = "../integration/rust_gen.rs"

[[bin]]
name = "integration_con"
path = "../integration/rust_con.rs"

[[example]]
name = "test_logger"
required-features = ["unilog"]
